<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>

    <string name="username_required">Username is required</string>
    <string name="pw_required">Password is required</string>
    <string name="invalid_username_pw">Invalid username or password</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="log_out">Log out</string>
    <string name="description">Description</string>
    <string name="take_picture">Take picture</string>
    <string name="submit">Submit</string>
    <string name="picture">Picture</string>
    <string name="go_to_your_feed">Go to your feed</string>
    <string name="image">Image</string>
    <string name="sign_up">Sign up</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile">Profile</string>
    <string name="capture">Capture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
</resources>