<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/ivInstaLogo"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="60dp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#2196F3"
        android:radius="10dp"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:id="@+id/ivInstaLogo"
        android:layout_width="176dp"
        android:layout_height="110dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/instagram_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/insta_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>